--- a/p3/a3/templates/assign_sub.html
+++ b/p3/a3/templates/assign_sub.html
@@ -14,11 +14,13 @@
     <form action="" method="post">
         {% csrf_token %}
         <label for="name">Employee Name</label>
-        <input class="border w-full h-10 px-3 mb-5 rounded-md" type="text" name="name" required placeholder="employee name">
+        <input class="border w-full h-10 px-3 mb-5 rounded-md" list="section-list" name="name" placeholder="employee username" required>
 
-        <label for="name">Employee Id</label>
-        <input class="border w-full h-10 px-3 mb-5 rounded-md" type="number" name="emp_id" required placeholder="emp_id" >
-
+        <datalist id="section-list">
+            {% for user in users %}
+                <option value="{{ user.username }}">
+            {% endfor %}
+            </datalist>
         <label for="name">Branch</label>
         <input class="border w-full h-10 px-3 mb-5 rounded-md" type="text" name="branch" required placeholder="Branch">
 
