--- a/p3/a3/templates/syllabus.html
+++ b/p3/a3/templates/syllabus.html
@@ -27,7 +27,7 @@
         <tbody class="">
         <tr>
             <td class="px-6 py-3" >{{ i.emp_id }}</td>
-            <td class="px-6 py-3" >{{ i.name }}</td>
+            <td class="px-6 py-3" >{{ i.username }}</td>
             <td class="px-6 py-3" >{{ i.subject }}</td>
             <td class="px-6 py-3" >{{ i.branch }}</td>
             <td class="px-6 py-3" >{{ i.section }}</td>
