--- a/p3/a3/templates/syl_updates.html
+++ b/p3/a3/templates/syl_updates.html
@@ -15,16 +15,14 @@
         <form action=""  method="post">
             {% csrf_token %} 
             <!-- {{ forms }} -->
-            <label for="name">User Name</label>
-            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="name" placeholder="username" id="">
-            <label for="name">Employee Id</label>
-            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="emp_id" placeholder="Employee Id" id="">
             <label for="name">Subject Name</label>
             <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="subject" placeholder="Subject Name" id="">
             <label for="name">Branch</label>
             <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="branch" placeholder="Branch" id="">
             <label for="name">Section</label>
-            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="Section" placeholder="Branch" id="">
+            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="text" required name="section" placeholder="Section" id="">
+            <label for="name">Year</label>
+            <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="number" required name="year" placeholder="Year" id="">
             <label for="startdate">Start Date</label>
             <input  class="border w-full h-10 px-3 mb-5 rounded-md" type="date" required name="startdate" placeholder="Start Date" id="">
             <label for="enddate">Number of Units Completed</label>
