--- a/p3/a3/templates/update_employees.html
+++ b/p3/a3/templates/update_employees.html
@@ -20,7 +20,7 @@
         <tr>
             <td class="px-6 py-3" >{{ i.username }}</td>
             <td class="px-6 py-3" >{{ i.email }}</td>
-            <td class="px-6 py-3" >{{ i.branch }}</td>
+            <td class="px-6 py-3" >{{ i.stream }}</td>
             <td class="px-6 py-3" >{{ i.date_created }}</td>
             <td><a href="../{{i.id}}/accept"><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-6 py-2 rounded">Accept</button></a></td>
             <td><a href="../{{i.id}}/delete"><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-6 py-2 rounded">Reject</button></a></td>
