--- a/p3/accounts/templates/signup.html
+++ b/p3/accounts/templates/signup.html
@@ -1,4 +1,3 @@
-
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 <html lang="en">
@@ -8,28 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
+    <!-- Example usage in your template -->
+    <script src="{% static 'django-browser-reload/reload-listener.js' %}"></script>
 </head>
-<body class = "bg-slate-200">
+<body class="bg-slate-200">
 
-<form method="post" class="max-w-md mx-auto bg-white py-10 px-6 rounded-lg shadow-lg">
+<form method="post" class="max-w-md mx-auto bg-white py-10 px-6 rounded-lg shadow-lg" enctype="multipart/form-data">
   {% csrf_token %}
-  <h2 class="text-2xl font-bold mb-8">Registration</h2><hr>
+  <h2 class="text-2xl font-bold mb-8">Registration</h2>
+  <hr>
   {% for field in form %}
     <div class="mb-6">
       <label for="{{ field.id_for_label }}" class="block text-gray-700 text-sm font-bold mb-2">{{ field.label }}</label>
-      <div class="mt-2 border-2 w-[185px]">{{field}}</div>
-            </div>
-{% comment %} {{ field.field.widget.attrs.update({'class': 'w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:border-blue-500'}) }}
-{{ field }} {% endcomment %}
-      {% if field.help_text %}
-        <small class="text-gray-600">{{ field.help_text }}</small>
-      {% endif %}
-      {% if field.errors %}
-        <ul class="mt-2 text-red-500 text-sm">
-          {% for error in field.errors %}
-            <li>{{ error }}</li>
-          {% endfor %}
-        </ul>
+      <div class="mt-2 border-2 w-[185px]">{{ field }}</div>
+      {% if field.name == "joining_letter" %}
+        <small class="text-gray-600">Attach your joining letter here.</small>
+      {% else %}
+        {% if field.help_text %}
+          <small class="text-gray-600">{{ field.help_text }}</small>
+        {% endif %}
+        {% if field.errors %}
+          <ul class="mt-2 text-red-500 text-sm">
+            {% for error in field.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
       {% endif %}
     </div>
   {% endfor %}
@@ -39,4 +42,4 @@
 </form>
 
 </body>
-</html> 
+</html>
