--- a/p3/accounts/templates/user_login.html
+++ b/p3/accounts/templates/user_login.html
@@ -57,7 +57,7 @@
     <div align="center">
       {% for i in messages%}
       <script>
-        {% comment %} alert("{{i}}"); {% endcomment %}
+        alert("{{i}}");
       </script>
       {% endfor %}
     </div>
