--- a/p3/a3/templates/profile.html
+++ b/p3/a3/templates/profile.html
@@ -139,10 +139,7 @@ body {
         <div class="col-md-4">
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center experience">
-                    <span>Edit Experience</span>
-                    <span class="border px-3 p-1 add-experience">
-                        <i class="fa fa-plus"></i>&nbsp;Experience
-                    </span>
+                    <span>Experience</span>
                 </div>
                 <br>
                 <div class="col-md-12">
