--- a/p3/a3/templates/emp_home.html
+++ b/p3/a3/templates/emp_home.html
@@ -4,8 +4,11 @@
 </head>
 {%block body%}
     <script src="https://cdn.tailwindcss.com"></script>
-{% tailwind_css %}
-    <img src ="{% static 'gvpce1.jpg' %}" class="w-full">
-
+{% tailwind_css %} 
+ <div class="text-center font-serif absolute top-72">
+  <h1 class="text-4xl ">WELCOME TO GAYATRI VIDYA PARISHAD COLLEGE OF ENGINEERING(A)</h1>
+  <h1 class="text-5xl">{{ position.department }}</h1>
+</div>
+    <img src="{% static 'gvpce1.jpg' %}" class="w-full">
 {% include "footer.html"%}
 {% endblock %}
