--- a/p3/a3/templates/employees2.html
+++ b/p3/a3/templates/employees2.html
@@ -6,37 +6,35 @@
    {% tailwind_css %}
 
   <div class="relative overflow-x-auto ml-5">
-    <h1 class="border text-4xl text-yellow-800 px-6 pt-10 pb-8 bg-white w-1/2 max-w-md mx-auto rounded-t-md sm:px-10">Syllabus Updates</h1>
+    <h1 class="border text-4xl text-yellow-800 px-6 pt-10 pb-8 bg-white w-1/2 max-w-md mx-auto rounded-t-md sm:px-10">Employees</h1>
         <input type="text" id="Input" value="" placeholder="Enter your search" oninput ="searchtable()">
         <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400"  id="table">
             <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
                 <tr>
-                    
                     <th class="px-6 py-3">Employee id</th>
                     <th class="px-6 py-3">Full Name</th>
-                    <th class="px-6 py-3">subject Name</th>
-                    <th class="px-6 py-3">Branch</th>
-                    <th class="px-6 py-3">Section</th>
-                    <th class="px-6 py-3">Start Date</th>
-                    <th class="px-6 py-3">Number of Units Completed</th>
-                    <th class="px-6 py-3">Current Unit</th>
-
+                    <th class="px-6 py-3">Email Id</th>
+                    <th class="px-6 py-3">Date Of Birth</th>
+                    <th class="px-6 py-3">Mobile Number</th>
+                    <th class="px-6 py-3">Area of Specialization</th>
                 </tr>
             </thead>
-        {% for i in syllabus %}
-        <tbody class="">
-        <tr>
-            <td class="px-6 py-3" >{{ i.emp_id }}</td>
-            <td class="px-6 py-3" >{{ i.username }}</td>
-            <td class="px-6 py-3" >{{ i.subject }}</td>
-            <td class="px-6 py-3" >{{ i.branch }}</td>
-            <td class="px-6 py-3" >{{ i.section }}</td>
-            <td class="px-6 py-3" >{{ i.startdate }}</td>
-            <td class="px-6 py-3" >{{ i.units }}</td>
-            <td class="px-6 py-3" >{{ i.current }}</td>
-        </tr>
-        </tbody>
-        {% endfor %}
+        {% for i in employee %}
+    {% if user.username != i.username %}
+    <tbody class="">
+    <tr>
+        <td class="px-6 py-3">{{ i.emp_id }}</td>
+        <td class="px-6 py-3">  <a href="/profile_view/{{ i.username }}/">{{ i.username }}</a></td>
+        <td class="px-6 py-3">{{ i.email }}</td>
+        <td class="px-6 py-3">{{ i.dob }}</td>
+        <td class="px-6 py-3">{{ i.mobile }}</td>
+        <td class="px-6 py-3">{{ i.address }}</td>
+    </tr>
+    </tbody>
+    {% endif %}
+{% endfor %}
+
+
     </table>    
 </div>
 
