--- a/p3/a3/templates/hod_nav.html
+++ b/p3/a3/templates/hod_nav.html
@@ -21,7 +21,10 @@
               <a href="../syllabus " class="text-white hover:text-gray-300">Syllabus Updates</a>
             </li>
             <li>
-              <a href="../leaves_report" class="text-white hover:text-gray-300">leave report</a>
+              <a href="../leaves_report" class="text-white hover:text-gray-300">leaves</a>
+            </li>
+            <li>
+              <a href="../employees2" class="text-white hover:text-gray-300">Employees</a>
             </li>
             <li>
               <a href="../emp_profile" class="text-white hover:text-gray-300">Profile</a>
