--- a/p3/a3/templates/profile.html
+++ b/p3/a3/templates/profile.html
@@ -83,7 +83,7 @@ body {
                         <input type="text" class="form-control" placeholder="First name" name="username" value="{{ form.username.value }}">
                     </div>
                     <div class="col-md-6">
-                        <label class="labels">Surname</label>
+                        <label class="labels">Second name</label>
                         <input type="text" class="form-control" placeholder="Surname" name="surname" value="{{ form.surname.value }}">
                     </div>
                 </div>
@@ -101,7 +101,7 @@ body {
                         <input type="date" class="form-control" placeholder="Date of birth" name="dob" value="{{ form.dob.value }}">
                     </div>
                     <div class="col-md-12">
-                        <label class="labels">Address Line 1</label>
+                        <label class="labels">Area of Specialization</label>
                         <input type="text" class="form-control" placeholder="Enter address line 1" name="address" value="{{ form.address.value }}">
                     </div>
                     <div class="col-md-12">
