--- a/p3/a3/templates/leaves.html
+++ b/p3/a3/templates/leaves.html
@@ -28,7 +28,7 @@
                 <option value="others"> Others </option>
             </select>
             <label for="enter reason">Enter Reason</label>
-            <textarea required name="enterreason" id="textbox" class="border w-full  px-3 mb-5 rounded-md"></textarea>
+            <textarea  name="enterreason" id="textbox" class="border w-full  px-3 mb-5 rounded-md"></textarea>
             <input type="submit" name="submit" id="submit" value="Submit" class="ml-24 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-16 py-3 rounded">
         </form>
 {%endblock %}
