--- a/p3/a3/templates/leaves_report.html
+++ b/p3/a3/templates/leaves_report.html
@@ -26,7 +26,7 @@
             <td class="px-6 py-3" >{{ i.id }}</td> 
             <td class="px-6 py-3" >{{ i.startdate }}</td>
             <td class="px-6 py-3" >{{ i.lastdate }}</td>
-            <td class="px-6 py-3" >{{ i.enterreason }}</td>
+            <td class="px-6 py-3" >{{ i.reason }}</td>
             <td><a href="../{{i.id}}/accept_l"><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-6 py-2 rounded">Accept</button></a></td>
             <td><a href="../{{i.id}}/delete_z"><button class="ml-20 bg-green-500 hover:bg-blue-700 shadow-xl text-white uppercase text-sm font-semibold px-6 py-2 rounded">Reject</button></a></td>
         </tr>
