--- a/p3/a3/templates/profile_view.html
+++ b/p3/a3/templates/profile_view.html
@@ -1,9 +1,9 @@
-{% load static %}
-{% if position == "hod" %}
+ {% load static %}
+{% comment %}{% if position == "hod" %}
     {% include "hod_nav.html" %}
 {% else %}
     {% include "emp_nav.html" %}
-{% endif %}
+{% endif %} {% endcomment %}
 {% block title %}    <title>Document</title>{% endblock %}
 {% block body %}
 {% block css %}<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css">{% endblock %}
@@ -41,7 +41,9 @@
                     <div class="col-md-6"><label class="labels">Country</label><p class="form-control" >{{profile.country}}</div>
                     <div class="col-md-6"><label class="labels">State/Region</label><p class="form-control" >{{profile.state}}</div>
                 </div>
-                <div class="mt-5 text-center"><a href= "../profile_update" class="btn btn-primary profile-button" type="button">Edit Profile</a></div>
+                <div class="mt-5 text-center"><a href= "../../assign_sub" class="btn btn-primary profile-button m-4" type="button">Assign Subject</a>
+                <a href= "" class="btn btn-primary profile-button m-4" type="button">Assign Task</a>
+                </div>
             </div>
         </div>
         <div class="col-md-4">
