--- a/p3/accounts/templates/hr_login.html
+++ b/p3/accounts/templates/hr_login.html
@@ -51,7 +51,7 @@
   </body>
   <script>
     var form_fields = document.getElementsByTagName("input");
-    form_fields[1].placeholder = "Email..";
+    form_fields[1].placeholder = "UserName..";
     form_fields[2].placeholder = "Password..";
     for (var field in form_fields) {
       form_fields[field].className += " form-control";
